# near-sets

./: Cargo.toml  TODOs.md  build.sh
deployer-contract/: Cargo.toml  README.md
deployer-contract/src/: lib.rs
res/: defi.wasm  deployer_contract.wasm  fungible_token.wasm  greeter.wasm  token_set_fungible_token.wasm
shared/: Cargo.toml
shared/src/: lib.rs
tests/sim/: no_macros.rs  utils.rs  with_macros.rs
token-set/: Cargo.toml
token-set/src/: account_info.rs  lib.rs  token_set_info.rs  utils.rs
