[package]
name = "token-set-fungible-token"
version = "1.0.0"
authors = ["Lev Stambler"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
near-account = { path = "../../near-standards/near-account" }
near-internal-balances-plugin = { path = "../../near-standards/near-internal-balances-plugin" }
uint = "0.9.1"
